# asdf-vanity-grinder

./: .gitignore  Cargo.toml  LICENSE  start_grinder.sh
src/: main.rs
