[package]
name = "asdf-vanity-grinder"
version = "1.0.0"
edition = "2021"
description = "High-performance Solana vanity address generator"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
parking_lot = "0.12"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
